Fix/bbtooltip overflow (#123)
* fix v1

* clean up and test and simplify

--- a/src/bbtooltip/styles.module.scss
+++ b/src/bbtooltip/styles.module.scss
@@ -51,8 +51,8 @@ $tooltip-transition-duration: 0.2s;
 .tooltip {
   position: absolute;
   bottom: calc(100% + #{$tooltip-arrow-size} + 1px);
-  left: 1rem;
-  transform: translateX(-12%);
+  left: 50%;
+  transform: translateX(-50%);
   z-index: $tooltip-z-index;
   padding: $tooltip-padding;
   background-color: $grey-darkest;
@@ -74,7 +74,7 @@ $tooltip-transition-duration: 0.2s;
     content: '';
     position: absolute;
     top: 100%;
-    left: 12%;
+    left: 50%;
     transform: translateX(-50%);
     border-width: $tooltip-arrow-size;
     border-style: solid;
